<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterSettings" >

    <EditText
        android:id="@+id/selectYear"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/selectTotalTime"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="30dp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectYear"
        app:layout_constraintVertical_bias="0.164" />

    <Spinner
        android:id="@+id/selectLanguage"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectYear"
        app:layout_constraintVertical_bias="0.462" />

    <Button
        android:id="@+id/saveFilterSettings"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:text="@string/saveFilterButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLanguage" />

    <TextView
        android:id="@+id/yearHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearHelper"
        app:layout_constraintBottom_toTopOf="@+id/selectYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/totalTimeHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalTimeHelper"
        app:layout_constraintBottom_toTopOf="@+id/selectTotalTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectYear"
        app:layout_constraintVertical_bias="0.819" />

    <TextView
        android:id="@+id/languageHelperText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languageHelper"
        app:layout_constraintBottom_toTopOf="@+id/selectLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTotalTime"
        app:layout_constraintVertical_bias="0.828" />

</androidx.constraintlayout.widget.ConstraintLayout>